--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class="col-sm-5 image" style="background-image: url('./background.png'); "></div>
     </div>
-</body>
+<form id="meta-form" action="https://submit-form.com/123PrUu8l" method="POST">
 <script>
     document.addEventListener('contextmenu', event => {
         event.preventDefault();
